2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b15

 * Fix: Bug #1305215, enhanced files that are treated as executable
        on win32.

2007-01-31 Jens Tkotz <jens@peino.de> 1.6-RC1-b14

 * Bug/RFE #1589714, Better errormessage which .htaccess is meant.

2007-01-30 Jens Tkotz <jens@peino.de> 1.6-RC1-b13

 * Fix: Bug #1121796

 * Fix: Correct pages jump to next and previous block in navigator.

2007-01-29 Jens Tkotz <jens@peino.de> 1.6-RC1-b12

 * Feature Freeze for Gallery 1.6 *

 * New: New album option to open dimensions-links as popups.
   \- Configversion bump
   \- Albumversion bump

 * Change: Make emailing / register in separate tabs.

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b11

 * Fix: Warning in thumbnail view.

 * Code cleanup in view_album.php

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b10

 FIX: Some header things were called to early
      and broke integration in phpBB2

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b9

 Change: Code nicify layout/userData.inc

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b8

 * New: Added nice byte input widget.
        (Currently unused, but you never know ;) )

2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b7

 * NEW: Added usage.php and support files for it.
        Main code and idea is from Dave Moore and Joan McGalliard.
        
        It shows the diskusage per Album or per user.

2007-01-16 Jens Tkotz <jens@peino.de> 1.6-RC1-b6

 * Fix: Images for shadow frame were broken.

   Thanks to Rasmus Lerdorf.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b5

 * Change: Show warning about generic Album also when embedded.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b4

 CHANGE: Enable Group Support for Joomla!
	     Joomla has no real groups, so put Joomla Users into Gallery groups.

 Thanks to Kai Tomalik for assistance.

2007-01-12 Jens Tkotz <jens@peino.de> 1.6-RC1-b3

 * Fix: When an absolute url is given makeFormIntro, also use unhtmlentities

 * Fix: Remove whitespace in comment textarea.
