@@ -22,7 +22,7 @@
 ?>
 <?php
 
-$gallery->version = '1.6-RC1-svn-b15';
+$gallery->version = '1.6-RC1-svn-b16';
 $gallery->config_version = 101;
 $gallery->album_version = 40;
 $gallery->user_version = 6;
